--- a/config/default.toml
+++ b/config/default.toml
@@ -77,9 +77,9 @@ postsize="2MB"
 #tmpdir="/tmp"
 
 [mysql]
-host="localhost"
-user="mailtrain"
-password="mailtrain"
+host="127.0.0.1"
+user="homestead"
+password="secret"
 database="mailtrain"
 # Some installations, eg. MAMP can use a different port (8889)
 # MAMP users should also turn on "Allow network access to MySQL" otherwise MySQL might not be accessible
@@ -89,7 +89,7 @@ timezone="local"
 
 [redis]
 # enable to use Redis session cache or disable if Redis is not installed
-enabled=false
+enabled=true
 host="localhost"
 port=6379
 db=5
