--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "posix": "^4.1.1"
   },
   "dependencies": {
+    "swagger-node-express": "~2.0",
+    "minimist": "*",
     "async": "^2.3.0",
     "aws-sdk": "^2.37.0",
     "bcrypt-nodejs": "0.0.3",
